src/test/run-pass/estr-shared.rs
// xfail-test
fn main() {
    let x : str/@ = "hello"/@;
}
